--- a/pilot.html
+++ b/pilot.html
@@ -16,11 +16,12 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
@@ -103,33 +104,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 60px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 65px;
+  margin-top: -65px;
 }
 .dropdown-submenu {
   position: relative;
@@ -245,6 +246,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -267,11 +271,19 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">R Story</a>
+      <a class="navbar-brand" href="index.html">Home</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        
+        <li>
+  <a href="index.html">About</a>
+</li>
+<li>
+  <a href="pilot.html">Pilot Community Recruitment</a>
+</li>
+<li>
+  <a href="about_team.html">Meet the Team</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -282,6 +294,14 @@ $(document).ready(function () {
 
 <div class="fluid-row" id="header">
 
+<div class="btn-group pull-right">
+<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
+
 
 
 <h1 class="title toc-ignore">Pilot Community Recruitment</h1>
@@ -289,15 +309,19 @@ $(document).ready(function () {
 </div>
 
 
+<p>#maybe an image of manistee?</p>
 <div id="what-is-the-pilot-program" class="section level2">
 <h2>What is the Pilot Program?</h2>
-<p>R Story is currently seeking additional communities to serve as pilot communities. Pilot communities will take part in virtual meetings with the R Story team to talk about their economic development strategies as well as receive an analysis of the demographic and economic data for their county.</p>
-<p>Ideal pilot communities would be those in rural areas with fewer than 50,000 residents who have community economic development goals and can be at any stage of implementation.</p>
-<p>The process will begin with a discussion of the community’s goals and challenges in terms of economic development. R Story will perform a deep dive into the federal public data for each community, share the results of the data exploration, and seek feedback as to how the participant might use the data in their economic development work. Additionally, community members will receive access to the R Story prototype for use and feedback in their economic development work.</p>
+<p>R Story is currently seeking additional communities to serve as pilot communities. Pilot communities will take part in virtual meetings with the R Story team to talk about their economic development strategies as well as receive an analysis of the demographic and economic data for their county. <span class="math inline">\(~\)</span></p>
+<p>Ideal pilot communities would be those in rural areas with fewer than 50,000 residents who have community economic development goals and can be at any stage of implementation. <span class="math inline">\(~\)</span></p>
+<p>The process will begin with a discussion of the community’s goals and challenges in terms of economic development. R Story will perform a deep dive into the federal public data for each community, share the results of the data exploration, and seek feedback as to how the participant might use the data in their economic development work. Additionally, community members will receive access to the R Story prototype for use and feedback in their economic development work. <span class="math inline">\(~\)</span></p>
 <p>As a first pilot community, R Story worked with Manistee, Michigan who continues to use R Story in their economic development work. Marc Miller (Economic Development Director of Manistee, Michigan) states that “this tool was created to allow leaders in economic development to save time and easily access the data we need to champion our communities”.</p>
-<p>###Sign Up to be a Pilot Community</p>
+<p><br></p>
+<div id="sign-up-to-be-a-pilot-community" class="section level3">
+<h3>Sign Up to be a Pilot Community</h3>
 <p>If you’re interested in participating as a pilot community for R Story, please fill out the form at this <a href="https://forms.gle/rNqLiPVp4szFWPzv8">link</a>.</p>
-<p>For any questions or enquiries about partnership, please contact sing <a href="mailto:rstorytool@gmail.com">mailto</a></p>
+<p>For any questions or enquiries about partnership, please contact us at <a href="mailto:rstorytool@gmail.com">rstorytool@gmail.com</a></p>
+</div>
 </div>
 
 
@@ -333,6 +357,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
